# src/main/java/nl/jimkaplan/autotrader/model/dto/BotConfigurationResponse.java
@@ -16,4 +16,5 @@ public class BotConfigurationResponse {
     private String botId;
     private String tradingPair;
     private Boolean active;
+    private Long operatorId;
 }
